# opengl-tilemap

./: .gitignore  CMakeLists.txt  go.mod  go.sum  main.c  main.go  test.tmx  tile-fs.glsl  tile-vs.glsl  tilemap.tmx  tilemap.tsx  tilemap2.tsx  tilemap3.tsx  tilemap4.tsx
assets/: SOURCE.txt  map2.tmx
pkg/: glfw.go  program.go
